--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <!-- Site logo and theme change toggle -->
                     <div class="header">
                         <div class="site-logo">
-                            DevFinder
+                            <h2>DevFinder</h2>
                         </div>
 
                         <div class="theme-toggle">
@@ -45,6 +45,62 @@
                             <i class="fa-solid fa-magnifying-glass"></i>
                             <input id="search-input" type="text" placeholder="Search github username...">
                             <button id="search-btn">Search</button>
+                        </div>
+                    </div>
+
+                    <!-- User info -->
+                    <div class="user">
+                        <div class="user-image">
+                            <img src="https://avatars.githubusercontent.com/u/76956355?v=4" alt="">
+                        </div>
+
+                        <div class="user-info">
+                            <div class="name">
+                                <h2>Sabbir Zzaman</h2>
+                                <p class="join">Join 2022 Dec</p>
+                            </div>
+
+                            <div class="username">
+                                <p>sabbirzzaman</p>
+                            </div>
+
+                            <div class="bio">
+                                <p>This profile has no bio.</p>
+                            </div>
+
+                            <div class="activity">
+                                <div class="repo">
+                                    <p>Repos</p>
+                                    <h2>28</h2>
+                                </div>
+                                <div class="followers">
+                                    <p>Followers</p>
+                                    <h2>348</h2>
+                                </div>
+                                <div class="following">
+                                    <p>Following</p>
+                                    <h2>34</h2>
+                                </div>
+                            </div>
+
+                            <div class="other-info">
+                                <div class="item address">
+                                    <i class="fa-solid fa-location-dot"></i>
+                                    <span>Bangladesh</span>
+                                </div>
+                                <div class="item twitter">
+                                    <i class="fa-brands fa-twitter"></i>
+                                    <span>Not set</span>
+                                </div>
+                                <div class="item link">
+                                    <i class="fa-solid fa-link"></i>
+                                    <span>Link</span>
+                                </div>
+                                <div class="item company">
+                                    <i class="fa-solid fa-building"></i>
+                                    <span>Google</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
