theme toggle added

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                         </div>
 
                         <div class="theme-toggle">
-                            <span>Light</span>
-                            <i class="fa-solid fa-sun"></i>
+                            <span id="theme-toggle"><span>Light</span> <i class="fa-solid fa-sun"></i></span>
                         </div>
                     </div>
 
